--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "tauri": "tauri",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -16,38 +17,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.0.4",
     "@angular/cdk": "^15.0.3",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
+    "@angular/common": "^15.0.4",
+    "@angular/compiler": "^15.0.4",
+    "@angular/core": "^15.0.4",
+    "@angular/forms": "^15.0.4",
     "@angular/material": "^15.0.3",
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/router": "^15.0.4",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^15.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@tauri-apps/api": "^1.2.0",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "@types/leaflet": "^1.9.0",
-    "@types/quill": "^1.3.7",
-    "leaflet": "^1.7.1",
+    "@types/leaflet.markercluster": "^1.5.1",
+    "@xeger/quill-image-actions": "^0.7.1",
+    "@xeger/quill-image-formats": "^0.7.1",
+    "jodit-pro": "^1.3.36",
+    "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
     "ngx-quill": "^20.0.1",
     "openapi-generator": "^0.1.39",
+    "parchment": "^2.0.1",
     "quill": "^1.3.7",
     "quill-delta": "^5.0.0",
-    "quill-image-resize": "^3.0.9",
+    "quill-delta-to-html": "^0.12.1",
+    "quill-emoji": "^0.2.0",
     "quill-image-resize-module": "^3.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "quill-mention": "^3.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.4.1",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.3",
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
+    "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.18",
+    "@types/quill": "^1.3.10",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
