--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "archaological-map",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "tauri": "tauri",
+    "web:serve": "ng serve -o",
+    "web:build": "ng build --base-href ./",
+    "web:dev": "npm run web:build",
+    "web:prod": "npm run web:build -- -c production",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -36,7 +40,6 @@
     "@types/leaflet.markercluster": "^1.5.1",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
-    "jodit-pro": "^1.3.36",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
     "ngx-quill": "^20.0.1",
