--- a/package.json
+++ b/package.json
@@ -37,21 +37,20 @@
     "@tauri-apps/api": "^1.2.0",
     "@types/leaflet": "^1.9.0",
     "@types/leaflet.markercluster": "^1.5.1",
+    "@types/uuid": "^9.0.1",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
-    "ngx-quill": "^20.0.1",
     "openapi-generator": "^0.1.39",
     "parchment": "^2.0.1",
     "quill": "^1.3.7",
-    "quill-delta": "^5.0.0",
-    "quill-delta-to-html": "^0.12.1",
     "quill-emoji": "^0.2.0",
     "quill-image-resize-module": "^3.0.0",
     "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.4.1",
+    "uuid": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -61,7 +60,7 @@
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.18",
-    "@types/quill": "^1.3.10",
+    "@types/quill": "^2.0.10",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
