--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
 tauri = { version = "1.2.4", features = ["api-all", "system-tray"] }
 diesel = { version = "2.0.2", features = ["sqlite"] }
 diesel_migrations = "2.0.0"
+derive_builder = "0.12.0"
 
 [features]
 # by default Tauri runs in production mode
