--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.10",
+    "@angular/animations": "^16.2.11",
     "@angular/cdk": "^16.2.10",
-    "@angular/common": "^16.2.10",
-    "@angular/compiler": "^16.2.10",
-    "@angular/core": "^16.2.10",
-    "@angular/forms": "^16.2.10",
+    "@angular/common": "^16.2.11",
+    "@angular/compiler": "^16.2.11",
+    "@angular/core": "^16.2.11",
+    "@angular/forms": "^16.2.11",
     "@angular/material": "^16.2.10",
-    "@angular/platform-browser": "^16.2.10",
-    "@angular/platform-browser-dynamic": "^16.2.10",
-    "@angular/router": "^16.2.10",
-    "@asymmetrik/ngx-leaflet": "^15.0.1",
-    "@asymmetrik/ngx-leaflet-markercluster": "^15.0.0",
+    "@angular/platform-browser": "^16.2.11",
+    "@angular/platform-browser-dynamic": "^16.2.11",
+    "@angular/router": "^16.2.11",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@ngrx/component-store": "^16.3.0",
+    "@ngrx/entity": "^16.3.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@tauri-apps/api": "^1.2.0",
     "@types/leaflet": "^1.9.0",
@@ -56,7 +57,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.8",
     "@angular/cli": "~16.2.8",
-    "@angular/compiler-cli": "^16.2.10",
+    "@angular/compiler-cli": "^16.2.11",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.18",
