--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@angular/router": "^16.2.11",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@ngrx/component-store": "^16.3.0",
+    "@ngrx/effects": "^16.3.0",
     "@ngrx/entity": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@tauri-apps/api": "^1.2.0",
     "@types/leaflet": "^1.9.0",
