--- a/angular.json
+++ b/angular.json
@@ -37,9 +37,7 @@
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss",
-              "src/theme-light.scss",
-              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
-              "node_modules/leaflet.markercluster/dist/MarkerCluster.css"
+              "src/theme-light.scss"
             ],
             "scripts": ["node_modules/quill/dist/quill.min.js"],
             "allowedCommonJsDependencies": ["quill"]
