--- a/package.json
+++ b/package.json
@@ -31,25 +31,22 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
-    "@asymmetrik/ngx-leaflet": "^16.0.1",
-    "@ngrx/component-store": "^16.3.0",
-    "@ngrx/effects": "^16.3.0",
-    "@ngrx/entity": "^16.3.0",
-    "@ngrx/store": "^16.3.0",
-    "@ngrx/store-devtools": "^16.3.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@ngrx/component-store": "^17.0.0",
+    "@ngrx/effects": "^17.0.0",
+    "@ngrx/entity": "^17.0.0",
+    "@ngrx/store": "^17.0.0",
+    "@ngrx/store-devtools": "^17.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
     "@tauri-apps/api": "^1.2.0",
     "@types/leaflet": "^1.9.0",
-    "@types/leaflet.markercluster": "^1.5.1",
     "@types/uuid": "^9.0.1",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
     "leaflet": "^1.9.3",
-    "leaflet.markercluster": "^1.5.3",
-    "openapi-generator": "^0.1.39",
     "parchment": "^2.0.1",
     "quill": "^1.3.7",
-    "quill-emoji": "^0.2.0",
+    "quill-image-drop-and-paste": "^1.3.0",
     "quill-image-resize-module": "^3.0.0",
     "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
