--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngrx/component-store": "^17.0.0",
     "@ngrx/effects": "^17.0.0",
     "@ngrx/entity": "^17.0.0",
+    "@ngrx/signals": "^17.1.0",
     "@ngrx/store": "^17.0.0",
     "@ngrx/store-devtools": "^17.0.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
@@ -50,6 +51,7 @@
     "quill-image-resize-module": "^3.0.0",
     "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
+    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
     "zone.js": "~0.14.2"
@@ -58,6 +60,7 @@
     "@angular-devkit/build-angular": "^17.0.1",
     "@angular/cli": "~17.0.1",
     "@angular/compiler-cli": "^17.0.3",
+    "@ngrx/schematics": "^17.1.1",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.18",
