--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
 tauri = { version = "1.2.4", features = ["api-all", "system-tray"] }
 diesel = { version = "2.0.2", features = ["sqlite"] }
+tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 diesel_migrations = "2.0.0"
 derive_builder = "0.12.0"
 
