--- a/angular.json
+++ b/angular.json
@@ -7,8 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineStyle": true,
-          "inlineTemplate": true
+          "inlineStyle": false,
+          "inlineTemplate": false
         }
       },
       "root": "",
