--- a/package.json
+++ b/package.json
@@ -22,25 +22,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.3",
-    "@angular/cdk": "^17.0.1",
-    "@angular/common": "^17.0.3",
-    "@angular/compiler": "^17.0.3",
-    "@angular/core": "^17.0.3",
-    "@angular/forms": "^17.0.3",
-    "@angular/material": "^17.0.1",
-    "@angular/platform-browser": "^17.0.3",
-    "@angular/platform-browser-dynamic": "^17.0.3",
-    "@angular/router": "^17.0.3",
+    "@angular/animations": "^17.3.6",
+    "@angular/cdk": "^17.3.6",
+    "@angular/common": "^17.3.6",
+    "@angular/compiler": "^17.3.6",
+    "@angular/core": "^17.3.6",
+    "@angular/forms": "^17.3.6",
+    "@angular/material": "^17.3.6",
+    "@angular/platform-browser": "^17.3.6",
+    "@angular/platform-browser-dynamic": "^17.3.6",
+    "@angular/router": "^17.3.6",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
-    "@ngrx/component-store": "^17.0.0",
-    "@ngrx/effects": "^17.0.0",
-    "@ngrx/entity": "^17.0.0",
-    "@ngrx/signals": "^17.1.0",
-    "@ngrx/store": "^17.0.0",
-    "@ngrx/store-devtools": "^17.0.0",
+    "@ngrx/component-store": "^17.2.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/entity": "^17.2.0",
+    "@ngrx/signals": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
-    "@tauri-apps/api": "^1.2.0",
+    "@tauri-apps/api": "1.5.3",
     "@types/leaflet": "^1.9.0",
     "@types/uuid": "^9.0.1",
     "@xeger/quill-image-actions": "^0.7.1",
@@ -58,10 +58,10 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.1",
-    "@angular/cli": "~17.0.1",
-    "@angular/compiler-cli": "^17.0.3",
-    "@ngrx/schematics": "^17.1.1",
+    "@angular-devkit/build-angular": "^17.3.6",
+    "@angular/cli": "~17.3.6",
+    "@angular/compiler-cli": "^17.3.6",
+    "@ngrx/schematics": "^17.2.0",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.11.18",
