--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "generate": "openapi-generator-cli generate -i ../Common/AM.Api/am.yaml -g typescript-angular -o ./src/generated"
+    "generate": "openapi-generator-cli generate -i ../Common/AM.Api/am.yaml -g typescript-angular -o ./src/generated",
+    "lint": "ng lint"
   },
   "browser": {
     "fs": false,
@@ -54,16 +55,26 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.0",
     "@angular-devkit/build-angular": "^17.3.6",
+    "@angular-eslint/builder": "17.4.1",
+    "@angular-eslint/eslint-plugin": "17.4.1",
+    "@angular-eslint/eslint-plugin-template": "17.4.1",
+    "@angular-eslint/schematics": "17.4.1",
+    "@angular-eslint/template-parser": "17.4.1",
     "@angular/cli": "~17.3.6",
     "@angular/compiler-cli": "^17.3.6",
     "@ngrx/schematics": "^17.2.0",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
-    "@types/uuid": "^9.0.1",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.18",
     "@types/quill": "^2.0.10",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -71,7 +82,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "openapi-typescript-codegen": "^0.23.0",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "typescript": "~5.2.2"
   }
 }
-
