--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "generate": "openapi-generator-cli generate -i ../Common/AM.Api/am.yaml -g typescript-angular -o ./src/generated",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
     "lint": "ng lint"
   },
   "browser": {
@@ -50,6 +51,7 @@
     "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
+    "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
     "zone.js": "~0.14.2"
@@ -65,7 +67,7 @@
     "@angular/compiler-cli": "^17.3.6",
     "@ngrx/schematics": "^17.2.0",
     "@tauri-apps/cli": "^1.2.3",
-    "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.18",
     "@types/quill": "^2.0.10",
@@ -75,12 +77,8 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.1.0",
     "openapi-typescript-codegen": "^0.23.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
