--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jasmine"]
+    "types": ["jest"],
+    "esModuleInterop": true, 
+    "emitDecoratorMetadata": true 
   },
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+
 }
