upgrade angular to latest version

--- a/angular.json
+++ b/angular.json
@@ -16,11 +16,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/archaological-map",
+            "outputPath": {
+              "base": "dist/archaological-map"
+            },
             "index": "src/index.html",
-            "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
@@ -40,7 +41,10 @@
               "src/theme-light.scss"
             ],
             "scripts": ["node_modules/quill/dist/quill.min.js"],
-            "allowedCommonJsDependencies": ["quill"]
+            "allowedCommonJsDependencies": [
+              "quill"
+            ],
+            "browser": "src/main.ts"
           },
           "configurations": {
             "production": {
@@ -59,9 +63,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
