--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.6",
-    "@angular/cdk": "^17.3.6",
-    "@angular/common": "^17.3.6",
-    "@angular/compiler": "^17.3.6",
-    "@angular/core": "^17.3.6",
-    "@angular/forms": "^17.3.6",
-    "@angular/material": "^17.3.6",
-    "@angular/platform-browser": "^17.3.6",
-    "@angular/platform-browser-dynamic": "^17.3.6",
-    "@angular/router": "^17.3.6",
+    "@angular/animations": "^18.2.10",
+    "@angular/cdk": "^18.2.11",
+    "@angular/common": "^18.2.10",
+    "@angular/compiler": "^18.2.10",
+    "@angular/core": "^18.2.10",
+    "@angular/forms": "^18.2.10",
+    "@angular/material": "^18.2.11",
+    "@angular/platform-browser": "^18.2.10",
+    "@angular/platform-browser-dynamic": "^18.2.10",
+    "@angular/router": "^18.2.10",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
-    "@ngrx/component-store": "^17.2.0",
-    "@ngrx/effects": "^17.2.0",
-    "@ngrx/entity": "^17.2.0",
-    "@ngrx/signals": "^17.2.0",
-    "@ngrx/store": "^17.2.0",
+    "@ngrx/component-store": "^18.1.1",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/entity": "^18.1.1",
+    "@ngrx/signals": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
     "@tauri-apps/api": "1.5.3",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
@@ -52,18 +52,19 @@
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.10",
+    "@ngrx/operators": "^18.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.6",
-    "@angular-eslint/builder": "17.4.1",
-    "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
-    "@angular-eslint/schematics": "17.4.1",
-    "@angular-eslint/template-parser": "17.4.1",
-    "@angular/cli": "~17.3.6",
-    "@angular/compiler-cli": "^17.3.6",
-    "@ngrx/schematics": "^17.2.0",
+    "@angular-devkit/build-angular": "^18.2.11",
+    "@angular-eslint/builder": "18.4.0",
+    "@angular-eslint/eslint-plugin": "18.4.0",
+    "@angular-eslint/eslint-plugin-template": "18.4.0",
+    "@angular-eslint/schematics": "18.4.0",
+    "@angular-eslint/template-parser": "18.4.0",
+    "@angular/cli": "~18.2.11",
+    "@angular/compiler-cli": "^18.2.10",
+    "@ngrx/schematics": "^18.1.1",
     "@tauri-apps/cli": "^1.2.3",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.0",
@@ -84,6 +85,6 @@
     "openapi-typescript-codegen": "^0.23.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   }
 }
