upgrade tauri1.0 => tauri2.0

--- a/package.json
+++ b/package.json
@@ -33,13 +33,23 @@
     "@angular/platform-browser": "^18.2.10",
     "@angular/platform-browser-dynamic": "^18.2.10",
     "@angular/router": "^18.2.10",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@asymmetrik/ngx-leaflet": "^18.0.0",
     "@ngrx/component-store": "^18.1.1",
     "@ngrx/effects": "^18.1.1",
     "@ngrx/entity": "^18.1.1",
+    "@ngrx/operators": "^18.0.0",
     "@ngrx/signals": "^18.1.1",
     "@ngrx/store": "^18.1.1",
-    "@tauri-apps/api": "1.5.3",
+    "@tauri-apps/api": "^2.0.3",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.0.1",
+    "@tauri-apps/plugin-fs": "^2.0.1",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0",
+    "@tauri-apps/plugin-http": "^2.0.1",
+    "@tauri-apps/plugin-notification": "^2.0.0",
+    "@tauri-apps/plugin-os": "^2.0.0",
+    "@tauri-apps/plugin-process": "^2.0.0",
+    "@tauri-apps/plugin-shell": "^2.0.1",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
     "leaflet": "^1.9.3",
@@ -52,8 +62,7 @@
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
-    "zone.js": "~0.14.10",
-    "@ngrx/operators": "^18.0.0"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.11",
@@ -65,7 +74,7 @@
     "@angular/cli": "~18.2.11",
     "@angular/compiler-cli": "^18.2.10",
     "@ngrx/schematics": "^18.1.1",
-    "@tauri-apps/cli": "^1.2.3",
+    "@tauri-apps/cli": "^2.0.4",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.18",
