--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,18 +12,27 @@ rust-version = "1.59"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2.1", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 dotenvy = "0.15.6"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
-tauri = { version = "1.5.3", features = ["api-all", "system-tray"] }
+tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
 diesel = { version = "2.0.2", features = ["sqlite"] }
-tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-store = { version = "2" }
 diesel_migrations = "2.0.0"
 derive_builder = "0.12.0"
+tauri-plugin-process = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-clipboard-manager = "2.0.1"
+tauri-plugin-os = "2"
+tauri-plugin-shell = "2"
+tauri-plugin-http = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-notification = "2"
+tauri-api = "0.7.6"
 
 [features]
 # by default Tauri runs in production mode
@@ -32,3 +41,6 @@ default = ["custom-protocol"]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
+
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
+tauri-plugin-global-shortcut = "2"
