--- a/angular.json
+++ b/angular.json
@@ -37,8 +37,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "./node_modules/leaflet/dist/leaflet.css",
-              "src/styles.scss",
-              "src/theme-light.scss"
+              "src/styles.scss"
             ],
             "scripts": ["node_modules/quill/dist/quill.min.js"],
             "allowedCommonJsDependencies": [
