--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
               "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss"
             ],
@@ -97,6 +99,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/leaflet.markercluster/dist/MarkerCluster.css",
               "src/styles.scss"
             ],
             "scripts": ["node_modules/quill/dist/quill.min.js"]
