--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@angular/platform-browser": "^18.2.10",
     "@angular/platform-browser-dynamic": "^18.2.10",
     "@angular/router": "^18.2.10",
-    "@asymmetrik/ngx-leaflet": "^18.0.0",
+    "@bluehalo/ngx-leaflet": "^18.0.0",
+    "@bluehalo/ngx-leaflet-markercluster": "^18.0.0",
     "@ngrx/component-store": "^18.1.1",
     "@ngrx/effects": "^18.1.1",
     "@ngrx/entity": "^18.1.1",
@@ -50,9 +51,11 @@
     "@tauri-apps/plugin-os": "^2.0.0",
     "@tauri-apps/plugin-process": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@xeger/quill-image-actions": "^0.7.1",
     "@xeger/quill-image-formats": "^0.7.1",
     "leaflet": "^1.9.3",
+    "leaflet.markercluster": "^1.5.3",
     "parchment": "^2.0.1",
     "quill": "^1.3.7",
     "quill-image-drop-and-paste": "^1.3.0",
