--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,15 @@
             "style": "camelCase"
           }
         ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "warn", // or "error"
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
+        ],
         "@angular-eslint/component-selector": [
           "error",
           {
