--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@angular-eslint/template-parser": "18.4.0",
     "@angular/cli": "~18.2.11",
     "@angular/compiler-cli": "^18.2.10",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@ngrx/schematics": "^18.1.1",
     "@tauri-apps/cli": "^2.0.4",
     "@types/jest": "^29.5.12",
@@ -87,6 +89,7 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
