--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "strict": true,
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@service/*": ["src/app/services/*"],
+      "@component/*": ["src/app/component/*"]
+    },
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
