--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "app"
 version = "0.1.0"
-description = "Archological Maps"
+description = "Archaological Maps"
 authors = ["LLA"]
 license = ""
 repository = ""
@@ -19,7 +19,7 @@ dotenvy = "0.15.6"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
-tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
+tauri = { version = "2", features = [ "protocol-asset", "tray-icon", "devtools"] }
 diesel = { version = "2.0.2", features = ["sqlite"] }
 tauri-plugin-store = { version = "2" }
 diesel_migrations = "2.0.0"
