--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,6 +33,8 @@ tauri-plugin-http = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-notification = "2"
 tauri-api = "0.7.6"
+uuid = { version = "1.11.0", features = ["v4"] }
+serial_test = "3.2.0"
 
 [features]
 # by default Tauri runs in production mode
