--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2", features = [ "protocol-asset", "tray-icon", "devtools"] }
-diesel = { version = "2.0.2", features = ["sqlite"] }
+diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 tauri-plugin-store = { version = "2" }
 diesel_migrations = "2.0.0"
 tauri-plugin-process = "2"
