--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4  
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+      working-directory: src-tauri
+
