--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v4  
     - name: Build
       run: cargo build --verbose
+      working-directory: src-tauri
     - name: Run tests
       run: cargo test --verbose
       working-directory: src-tauri
