--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4  
+    - uses: actions/checkout@v4
+    - name: install tauri dependencies
+      run: sudo apt install libwebkit2gtk-4.1-dev libsoup3.0-dev
     - name: Build
       run: cargo build --verbose
       working-directory: src-tauri
