--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: install tauri dependencies
-      run: sudo apt install libwebkit2gtk-4.1-dev libsoup3.0-dev
+      run: sudo apt install libwebkit2gtk-4.1-dev libsoup2.4
     - name: Build
       run: cargo build --verbose
       working-directory: src-tauri
