--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ngrx/operators": "^18.0.0",
     "@ngrx/signals": "^18.1.1",
     "@ngrx/store": "^18.1.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tauri-apps/api": "^2.0.3",
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.0.1",
@@ -58,11 +59,13 @@
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
     "parchment": "^2.0.1",
+    "postcss": "^8.5.3",
     "quill": "^1.3.7",
     "quill-image-drop-and-paste": "^1.3.0",
     "quill-image-resize-module": "^3.0.0",
     "quill-mention": "^3.1.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.3",
     "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1",
     "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
