--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.10",
+    "@angular/animations": "^19.2.6",
     "@angular/cdk": "^18.2.11",
-    "@angular/common": "^18.2.10",
-    "@angular/compiler": "^18.2.10",
-    "@angular/core": "^18.2.10",
-    "@angular/forms": "^18.2.10",
+    "@angular/common": "^19.2.6",
+    "@angular/compiler": "^19.2.6",
+    "@angular/core": "^19.2.6",
+    "@angular/forms": "^19.2.6",
     "@angular/material": "^18.2.11",
-    "@angular/platform-browser": "^18.2.10",
-    "@angular/platform-browser-dynamic": "^18.2.10",
-    "@angular/router": "^18.2.10",
+    "@angular/platform-browser": "^19.2.6",
+    "@angular/platform-browser-dynamic": "^19.2.6",
+    "@angular/router": "^19.2.6",
     "@bluehalo/ngx-leaflet": "^18.0.0",
     "@bluehalo/ngx-leaflet-markercluster": "^18.0.0",
     "@ngrx/component-store": "^18.1.1",
@@ -70,17 +70,17 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
     "uuid": "^9.0.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.11",
     "@angular-eslint/builder": "18.4.0",
     "@angular-eslint/eslint-plugin": "18.4.0",
     "@angular-eslint/eslint-plugin-template": "18.4.0",
     "@angular-eslint/schematics": "18.4.0",
     "@angular-eslint/template-parser": "18.4.0",
-    "@angular/cli": "~18.2.11",
-    "@angular/compiler-cli": "^18.2.10",
+    "@angular/build": "^19.2.7",
+    "@angular/cli": "~19.2.7",
+    "@angular/compiler-cli": "^19.2.6",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@ngrx/schematics": "^18.1.1",
@@ -99,6 +99,7 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.1.0",
     "openapi-typescript-codegen": "^0.23.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0",
     "typescript": "~5.5.4"
