--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@xeger/quill-image-formats": "^0.7.1",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
+    "maplibre-gl": "^5.3.1",
     "parchment": "^2.0.1",
     "postcss": "^8.5.3",
     "quill": "^1.3.7",
@@ -85,6 +86,7 @@
     "@tauri-apps/cli": "^2.0.4",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.0",
+    "@types/maplibre-gl": "^1.13.2",
     "@types/node": "^18.11.18",
     "@types/quill": "^2.0.10",
     "@types/uuid": "^9.0.1",
