--- a/package.json
+++ b/package.json
@@ -83,10 +83,14 @@
     "@babel/preset-env": "^7.26.0",
     "@ngrx/schematics": "^18.1.1",
     "@tauri-apps/cli": "^2.0.4",
+    "@testing-library/angular": "^17.3.7",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.18",
-    "@types/quill": "^2.0.10",
+    "@types/quill": "^2.0.14",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
